Add API endpoint to create and trigger DAGs in the same call
Moved logic from clean_dag_run into cwl.py so it can be reused.
Add --combine flag to test new API endpoint. Possible risk - can
be too slow when cleaning old dag runs, as we can't create new
dag_run with the same dag_id and run_id if the previous one wasn't
deleted.
